--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.2.1",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies": "^0.9.1",
     "cookies-next": "^5.1.0",
-    "framer-motion": "^12.0.11",
+    "framer-motion": "^12.1.0",
     "jose": "^5.9.6",
     "lucide-react": "^0.474.0",
     "mysql2": "^3.12.0",
